Up-to-date-branch with tests

--- a/ElementFactory/Views/Home/Welcome.cshtml
+++ b/ElementFactory/Views/Home/Welcome.cshtml
@@ -22,7 +22,7 @@
             <div style="float: left; margin-right: 20px;">
                 <img src="~/images/elements.png" width="250" height="540">
             </div>
-            <div class="text-dark ">
+            <div>
                 <div>
                 Проектът "Кодът в химията" ще Ви представи различни аспекти от
                 химията около нас!
