--- a/ElementFactory/Views/Leaderboard/LoadLeaderboard.cshtml
+++ b/ElementFactory/Views/Leaderboard/LoadLeaderboard.cshtml
@@ -53,7 +53,7 @@
                             </td>
                             <td class="name-leaderboard td-leaderboard">@Model[i].Name</td>
                             <td class="points-leaderboard td-leaderboard">
-                                @Model[i].Points <img class="gold-medal" src="https://github.com/malunaridev/Challenges-iCodeThis/blob/master/4-leaderboard/assets/gold-medal.png?raw=true" alt="gold medal" />
+                                @Model[i].Points <img class="gold-medal" src="~/images/gold-medal.png" alt="gold medal" />
                             </td>
                         </tr>
                     }
