--- a/ElementFactory/Views/Question/ShowTestResult.cshtml
+++ b/ElementFactory/Views/Question/ShowTestResult.cshtml
@@ -14,6 +14,7 @@
 
     <h2>Брой верни отговори: @Model.CorrectAnswers / @Model.Questions</h2>
     <h2>Брой спечелени точки: @points</h2>
+    <h2>Време: @Model.Time</h2>
    
     <div class="testResultBtns">
         <a class="testResultBtn" 
