--- a/ElementFactory/Views/_ViewImports.cshtml
+++ b/ElementFactory/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ElementFactory
 @using ElementFactory.Models
+@using ElementFactory.Models.ClosedSystem;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
