--- a/ElementFactory/wwwroot/css/site.css
+++ b/ElementFactory/wwwroot/css/site.css
@@ -474,7 +474,7 @@ form td p
     font-family: 'Recursive', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     padding: 12px;
-    padding-top: 0;
+    padding-top: 0; 
 }
 
 .welcomePageContainer h1 {
@@ -489,7 +489,8 @@ form td p
     flex-direction: column;
     padding: 0 12px;
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 800;
+    color: white;   
 }
 
 .welcomePageContainer a {
@@ -1670,3 +1671,19 @@ form td p
 }
 
 /* ------------------------------ /
+
+/ ------------------------------ /
+/ Timer page css */
+
+#timeDone {
+    color: #33006F;
+    display: flex;
+    text-align:center;
+    border:none;
+    background:none;
+    font-size: 4.5em;
+}
+
+#handInTestForm {
+    flex-direction: column;
+}
