Schools functionality added, closed system fully implemented, css and view changes

--- a/ElementFactory/Views/Question/AddQuestionsChoose.cshtml
+++ b/ElementFactory/Views/Question/AddQuestionsChoose.cshtml
@@ -51,6 +51,7 @@
 
         <input type="hidden" asp-for="TestTitle" value="@Model.TestTitle" />
         <input type="hidden" asp-for="TestCategory" value="@Model.TestCategory" />
+        <input type="hidden" asp-for="Vision" value="@Model.Vision" />
     </form>
 
     <button class="selectQuestionsAnchor" onclick="CheckQuestions(@Model.NumberOfQ)">Добави въпроси</button>
