--- a/ElementFactory/Views/_ViewImports.cshtml
+++ b/ElementFactory/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using ElementFactory
 @using ElementFactory.Models
 @using ElementFactory.Models.ClosedSystem;
+@using ElementFactory.Models.User;
+@using ElementFactory.Data;
+@using ElementFactory.Core.Extensions;
+@using ElementFactory.Data.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
