--- a/ElementFactory/Views/Question/AddQuestionsOnOwn.cshtml
+++ b/ElementFactory/Views/Question/AddQuestionsOnOwn.cshtml
@@ -47,6 +47,7 @@
             <input type="hidden" asp-for="TestTitle" value="@Model.TestTitle" />
             <input type="hidden" asp-for="TestCategory" value="@Model.TestCategory" />
             <input type="hidden" asp-for="NumberOfQ" value="@Model.NumberOfQ" />
+            <input type="hidden" asp-for="Vision" value="@Model.Vision" />
 
             @for (int i = 0; i < Model.Questions.Count; i++)
             {
