--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -61,6 +61,26 @@
                                     </a>
                                 </li>
                             }
+                            if (User.IsInRole("Teacher"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-white"
+                                       asp-area="" asp-controller="Role"
+                                       asp-action="SeeAllStudents">
+                                        Ученици
+                                    </a>
+                                </li>
+                            }
+                            else if (User.IsInRole("Student"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-white"
+                                       asp-area="" asp-controller="Role"
+                                       asp-action="SeeAllTeachers">
+                                        Учители
+                                    </a>
+                                </li>
+                            }
                         }
                     </ul>
                     <partial name="_LoginPartial" />
