--- a/ElementFactory/Views/User/Register.cshtml
+++ b/ElementFactory/Views/User/Register.cshtml
@@ -1,8 +1,10 @@
 ﻿@using ElementFactory.Models.Login;
 @using ElementFactory.Models.Register;
+@inject ApplicationDbContext context;
 @model RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    var schools = context.Schools.ToList();
 }
 <h1 class="text-center">@ViewBag.Title</h1>
 
@@ -30,6 +32,16 @@
                 <label asp-for="@Model.ConfirmPassword">Confirm Password</label>
                 <input class="form-control" type="password" autocomplete="new-password" aria-required="true" asp-for="@Model.ConfirmPassword" />
                 <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="text-center mb-3">
+                <label asp-for="@Model.SchoolId" class="form-label"></label>
+                <select asp-for="@Model.SchoolId" class="form-control" autocomplete="current-school" aria-required="true">
+                    @foreach (School school in schools)
+                    {
+                        <option value="@school.Id">@school.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="SchoolId" class="text-danger"></span>
             </div>
             <div class="text-center">
                 <button id="registerSubmit" type="submit" class="btn btn-primary">Register</button>
