--- a/ElementFactory/Views/Shared/_Layout.cshtml
+++ b/ElementFactory/Views/Shared/_Layout.cshtml
@@ -81,6 +81,14 @@
                                     </a>
                                 </li>
                             }
+                            <li class="nav-item">
+                                <a class="nav-link text-white"
+                                   asp-area=""
+                                   asp-controller="Animations"
+                                   asp-action="Index">
+                                    Реакции
+                                </a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
@@ -94,7 +102,6 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
