--- a/ElementFactory/Views/Shared/_LoginPartial.cshtml
+++ b/ElementFactory/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,14 @@
     var user = await userManager.GetUserAsync(this.User);
 }
 <ul class="navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link text-white"
+           asp-area=""
+           asp-controller="Home"
+           asp-action="AboutUs">
+            За нас
+        </a>
+    </li>
 @if (signInManager.IsSignedIn(User) && user!=null)
 {
     <li class="nav-item">
